# rss-mining

./: .gitignore  README.md  docker-compose.yml  pyproject.toml  todo.md  up.sh
airflow-docker/: dockerfile
dags/: .database.env  faz-mining.py  faz_mining.py  fetch_sources.py  init_db.py  sz-mining.py  sz_mining.py  update_overall_mart.py  zeit-mining.py  zeit_mining.py
dags/sql/: create_raw_faz.sql  create_raw_sz.sql  create_raw_zeit.sql  create_schema_raw.sql  create_schemas.sql
dbt_transformations/: .user.yml  dbt_project.yml  profiles.yml
dbt_transformations/models/: sources.yml
dbt_transformations/models/marts/: mart_faz.sql  mart_overall.sql  mart_sz.sql  mart_zeit.sql  schema.yml
dbt_transformations/models/staging/: schema.yml  stg_faz.sql  stg_sz.sql  stg_zeit.sql
postgres-init-files/: create_databases.sql
python/: AirflowUtils.py  FAZParser.py  RSSGetter.py  SZParser.py  Settings.py  XMLParser.py  ZEITParser.py  main.py
setup/: setup_airflow_connections.sh
