[tool.poetry]
name = "rss-mining"
version = "0.1.0"
description = ""
authors = ["Maurice"]
readme = "README.md"
packages = [{include = "rss_mining"}]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.0.1"
requests = "^2.29.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
